2005-09-20  Wu Zhou  <woodzltc@cn.ibm.com>

	* expression.h (enum exp_opcode): Fix a format error of a comment.
 
2005-09-20  Wu Zhou  <woodzltc@cn.ibm.com>

	* expression.h (enum exp_opcode): Add a new operator for F90
	subrange.
	* f-lang.h (enum f90_range_type): New enumeration type to identify
	F90 subrange type.
	* f-exp.y (yyparse): Add support for parsing F90 subrange and
	change substring parsing to subrange parsing.
	* parse.c (operator_length_standard): Set the operator length
	and args number for OP_F90_RANGE.
	* eval.c (evaluate_subexp_standard): Add code to evaluate F90
	array section and substring.
	(value_f90_subarray): New function to evaluate F90 array section.
	(evaluate_subexp_standard): Delete label op_f77_substr and its code
	because the logic is implemented by function value_f90_subarray now.

2005-09-19  Paul Gilliam  <pgilliam@us.ibm.com>

	* rs6000-tdep.c (_initialize_rs6000_tdep): Get rid of the unused
	'info powerpc' command prefix.

2005-09-11  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/nm-linux.h (KERNEL_U_SIZE): Remove.
	(PTRACE_ARG3_TYPE, PTRACE_XFER_TYPE): Likewise.
	(s390_stopped_by_watchpoint, s390_insert_watchpoint,
	s390_remove_watchpoint, TARGET_CAN_USE_HARDWARE_WATCHPOINT,
	TARGET_REGION_OK_FOR_HW_WATCHPOINT, HAVE_CONTINUABLE_WATCHPOINT,
	STOPPED_BY_WATCHPOINT, target_insert_watchpoint,
	target_remove_watchpoint): Likewise.
	* s390-nat.c: Remove include of <sys/user.h>.
	(kernel_u_size): Remove.
	(s390_stopped_by_watchpoint): Make static.
	(s390_insert_watchpoint, s390_remove_watchpoint): Likewise.
	(s390_can_use_hw_breakpoint): New function.
	(s390_region_size_ok_for_hw_watchpoint): Likewise.
	(_initialize_s390_nat): Add watchpoint methods to target.

2005-09-10  Daniel Jacobowitz  <dan@codesourcery.com>
	    Ulrich Weigand  <uweigand@de.ibm.com>

	* Makefile.in (ALLDEPFILES): Update.
	(alpha-linux-nat.o, sparc-linux-nat.o): New rules.
	(amd64-linux-nat.o, arm-linux-nat.o, hppa-linux-nat.o)